--- a/grupparbete-master/index.html
+++ b/grupparbete-master/index.html
@@ -28,18 +28,18 @@
         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/5PSNL1qE6VY?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          -->
         <div id="main-poster-container">
-            <img id="main-poster" src="images/bigposter.jpg" alt="poster"/>    
-            <h1>VÄLKOMMEN</h1>
-            <span>välkommen till netfilm</span>
+            <img id="main-poster" src="images/bigposter4.jpg" alt="poster"/>    
+        
+            <span>Välkommen till Netfilm</span>
         </div>
 
         <div id="category-container">
-            <div><span>Action</span><img src="images/action.jpg"/></div>
-            <div><span>Skräck</span><img src="images/thriller.jpg"/></div>
-            <div><span>Drama</span><img src="images/drama.jpg"/></div>
-            <div><span>Thriller</span><img src="images/skräck.jpg"/></div>
-            <div><span>Komedi</span><img src="images/komedi.jpg"/></div>
-            <div><span>Romantik</span><img src="images/romantik.jpg"/></div>
+            <div><a href="file:///D:/Jonathan/Desktop/grupparbete-master/product/action.html" ><span>Action</span><img src="images/action.jpg"/></a></div>
+            <div><a href="file:///D:/Jonathan/Desktop/grupparbete-master/product/action.html" ><span>Skräck</span><img src="images/thriller.jpg"/></a></div>
+            <div><a href="file:///D:/Jonathan/Desktop/grupparbete-master/product/action.html" ><span>Drama</span><img src="images/drama.jpg"/></a></div>
+            <div><a href="file:///D:/Jonathan/Desktop/grupparbete-master/product/action.html" ><span>Thriller</span><img src="images/skräck.jpg"/></a></div>
+            <div><a href="file:///D:/Jonathan/Desktop/grupparbete-master/product/action.html" ><span>Komedi</span><img src="images/komedi.jpg"/></a></div>
+            <div><a href="file:///D:/Jonathan/Desktop/grupparbete-master/product/action.html" ><span>Romantik</span><img src="images/romantik.jpg"/></a></div>
         </div>
         
     </body>
