--- a/grupparbete-master/product/action.html
+++ b/grupparbete-master/product/action.html
@@ -6,12 +6,25 @@
         <link href="../css/main.css" rel="stylesheet">
         <script src="../js/jquery-3.4.1.min.js"></script>
         <script src="../js/action.js"></script>
-
+        <script src="https://kit.fontawesome.com/79397e9fed.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        <div id="product-container">
-            
+        <div id="container">
+            <div id="side-filter-overlay">
+                <div id="side-filter">
+                    <i class="fas fa-sliders-h"></i>
+                    <div id="filter-options">
+                        <p>dfdkosahnfoa</p>
+                        <p>dfdkosahnfoa</p>
+                        <p>dfdkosahnfoa</p>
+                        <p>dfdkosahnfoa</p>
+                    </div>
+                </div> 
+            </div>
+            <div id="product-container"> 
+
+            </div>
         </div>
     </body>
 </html>
